style-dictionary, tailwindcss 적용

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@tokens-studio/sd-transforms": "^2.0.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "sd-tailwindcss-transformer": "^2.2.1",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
@@ -37,5 +39,9 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "author": "",
+  "license": "ISC"
 }
