--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "@tokens-studio/sd-transforms": "^2.0.3",
+    "lucide-react": "^0.563.0",
+    "motion": "^12.29.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "sd-tailwindcss-transformer": "^2.2.1",
